--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
  
 
-spring.datasource.url=jdbc:mysql://localhost/student_detail
-spring.datasource.username=root
-spring.datasource.password=Bhoomi@1
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost/student_detail
+!spring.datasource.username=root
+!spring.datasource.password=Bhoomi@1
+!spring.jpa.hibernate.ddl-auto=update
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
